# earnings-trader-claude

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml  watchlist.yaml
evals/: evals.json
notion-schema/: setup.md
references/: macro_calendar.yaml  notion_state.md  strategy_ah_close.md  strategy_amc_brief.md  strategy_daily_recap.md  strategy_open_drift.md  strategy_post_amc.md  strategy_premarket.md
scripts/: backtest_composite.py  broker.py  broker_alpaca.py  discord_bot.py  earnings.py  edgar.py  ladder.py  risk.py  test_ladder.py  test_risk.py  test_trade_utils.py  trade.py
